<resources>
    <string name="app_name">calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="zero">0</string>
    <string name="dot" translatable="false">.</string>
    <string name="equals" translatable="false">=</string>
    <string name="add" translatable="false">+</string>
    <string name="subract" translatable="false">-</string>
</resources>