<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:id="@+id/lands_calc"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:elevation="40dp"
        tools:ignore="PrivateResource">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/rotate"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_baseline_screen_rotation_24"
            android:layout_alignParentEnd="true"
            android:contentDescription="TODO" />



        <EditText
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:textSize="35sp"
            android:autofillHints="@string/zero"
            android:textAlignment="textEnd"
            android:paddingTop="60dp"
            android:layout_marginTop="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:id="@+id/value"
            android:focusableInTouchMode="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:textColor="#000"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/result"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="30sp"
            android:layout_marginStart="10dp"
            android:textColor="#636262"
            android:textAlignment="viewEnd"
            android:layout_below="@id/value"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:background="#F3F0F0"
        android:layout_below="@id/lands_calc">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical"
            android:weightSum="8">


            <Button
                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#F3F0F0"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:text="@string/eight"
                android:textSize="25sp" />

            <Button
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#F3F0F0"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:text="@string/five"

                android:textSize="25sp" />

            <Button
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#F3F0F0"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:text="@string/two"
                android:textSize="25sp" />

            <Button
                android:id="@+id/decimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#F3F0F0"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:text="@string/dot"
                android:textSize="25sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/four"
            android:weightSum="8"
            android:orientation="vertical"
            android:background="#F3F0F0">
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/seven"
                android:layout_weight="2"
                android:textSize="25sp"
                android:id="@+id/seven"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"

                android:background="#F3F0F0" />
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="25sp"
                android:text="@string/four"
                android:id="@+id/four"
                android:backgroundTint="@null"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:layout_weight="2"
                android:background="#F3F0F0"/>

            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/one"
                android:textSize="25sp"
                android:layout_weight="2"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"

                android:id="@+id/one"
                android:background="#F3F0F0"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/zero"
                android:textSize="25sp"
                android:layout_weight="2"
                android:id="@+id/zero"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"

                android:background="#F3F0F0"/>



        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/nine"
                android:layout_weight="2"
                android:background="#F3F0F0"
                android:id="@+id/nine"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:textSize="25sp"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/six"
                android:textSize="25sp"
                android:layout_weight="2"
                android:id="@+id/six"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"

                android:background="#F3F0F0"/>

            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/three"
                android:textSize="25sp"
                android:id="@+id/three"
                android:layout_weight="2"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:background="#F3F0F0"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#F3F0F0"
                android:id="@+id/equals"
                android:text="@string/equals"
                android:textColor="#3E4FCA"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:textSize="25sp"
                android:layout_weight="2"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:weightSum="10"
            android:orientation="vertical">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#F3F0F0"
                android:textSize="25sp"
                android:id="@+id/clear"
                android:textColor="#3E4FCA"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:textStyle="bold"
                android:text="C"/>


            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="25sp"
                android:text="/"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:background="#F3F0F0"
                android:id="@+id/divide"
                android:textColor="#3E4FCA"
                android:textStyle="bold"
                android:layout_weight="2"/>

            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="*"
                android:textSize="25sp"
                android:layout_weight="2"
                android:id="@+id/multiply"
                android:textColor="#3E4FCA"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:background="#F3F0F0"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/subract"
                android:textSize="25sp"
                android:id="@+id/sub"
                android:layout_weight="2"
                android:textStyle="bold"
                android:textColor="#3E4FCA"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:background="#F3F0F0"/>

            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="25sp"
                android:text="@string/add"
                android:id="@+id/addition"
                android:background="#F3F0F0"
                android:textColor="#3E4FCA"
                android:textStyle="bold"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:layout_weight="2"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>