<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/lands_calc"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:elevation="40dp"
        tools:ignore="PrivateResource">


        <EditText
            android:id="@+id/value"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:autofillHints="@string/zero"
            android:background="@null"
            android:textAlignment="textEnd"
            android:focusableInTouchMode="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/value"
            android:layout_alignParentBottom="true"

            android:textAlignment="viewEnd"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/rotate"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_baseline_screen_rotation_24" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/lands_calc"
        android:weightSum="8">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#F3F0F0"
            android:orientation="vertical"
            android:text="@string/four"
            android:weightSum="8">

            <Button
                android:id="@+id/seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="center"
                android:background="#F3F0F0"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:text="@string/seven"

                android:textSize="25sp" />

            <Button
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#F3F0F0"
                android:backgroundTint="@null"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:text="@string/four"
                android:textSize="25sp" />

            <Button
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#F3F0F0"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"

                android:text="@string/one"
                android:textSize="25sp" />

            <Button
                android:id="@+id/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#F3F0F0"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:text="@string/zero"
                android:textSize="25sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:orientation="vertical"
            android:weightSum="8">


            <Button
                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#F3F0F0"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:text="@string/eight"
                android:textSize="25sp" />

            <Button
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#F3F0F0"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:text="@string/five"

                android:textSize="25sp" />

            <Button
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#F3F0F0"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:text="@string/two"
                android:textSize="25sp" />

            <Button
                android:id="@+id/decimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#F3F0F0"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:text="@string/dot"
                android:textSize="25sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#F3F0F0"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:text="@string/nine"
                android:textSize="25sp" />

            <Button
                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#F3F0F0"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:text="@string/six"

                android:textSize="25sp" />

            <Button
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#F3F0F0"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:text="@string/three"
                android:textSize="25sp" />

            <Button
                android:id="@+id/addition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#F3F0F0"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:text="@string/add"
                android:textSize="25sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10">

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#F3F0F0"
                android:text="C"
                android:textSize="25sp" />


            <Button
                android:id="@+id/divide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#F3F0F0"
                android:text="/"
                android:textSize="25sp" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#F3F0F0"
                android:text="*"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:textSize="25sp" />

            <Button
                android:id="@+id/sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#F3F0F0"
                android:text="@string/subract"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:textSize="25sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#3E4FCA"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <Button
                    android:id="@+id/sin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#3E4FCA"
                    android:text="sin"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/cos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#3E4FCA"
                    android:text="cos"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/tan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#3E4FCA"
                    android:text="tan"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:weightSum="6">

                <Button
                    android:id="@+id/mod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#3E4FCA"
                    android:text="%"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/log"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#3E4FCA"
                    android:text="log"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/root"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#3E4FCA"
                    android:text="√"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:weightSum="6">

                <Button
                    android:id="@+id/piey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#3E4FCA"
                    android:text="π"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/expo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#3E4FCA"
                    android:text="e"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/pow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#3E4FCA"
                    android:text="^"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6">

                <Button
                    android:id="@+id/lfbrac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#3E4FCA"
                    android:text="("
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/rtbarce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#3E4FCA"
                    android:text=")"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/equals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#3E4FCA"
                    android:text="@string/equals"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />


            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>